Added a file service. The database is no longer being used

--- a/FYP/Views/ReviewPage.xaml
+++ b/FYP/Views/ReviewPage.xaml
@@ -10,7 +10,7 @@
             <Label Text="Select Game" TextColor="Black" FontSize="24" FontAttributes="Bold" Margin="15" />
             <Picker x:Name="Picker" Title="Select a Game"  SelectedIndexChanged="Picker_SelectedIndexChanged" ItemsSource="{Binding Games}" ItemDisplayBinding="{Binding GameTitle}" />
 
-
+            
             <Label FontSize="Medium" HorizontalOptions="Center" Text="Did you pre-order this game?"/>
             <Editor x:Name="Question1" IsSpellCheckEnabled="True" HeightRequest="50" IsEnabled="False"/>
 
@@ -26,14 +26,15 @@
             <Label FontSize="Medium" HorizontalOptions="Center" Text=" What do you think about the game's age rating? (Is it correct?)"/>
             <Editor x:Name="Question5" IsSpellCheckEnabled="True" HeightRequest="50" IsEnabled="False"/>
 
-            <Label FontSize="Medium" HorizontalOptions="Center" Text=" How was the gameplay?(e.g It was intresting and fun because...)"/>
+            <Label FontSize="Medium" HorizontalOptions="Center" Text=" How was the gameplay?(e.g It was interesting  and fun because...)"/>
             <Editor x:Name="Question6" IsSpellCheckEnabled="True" HeightRequest="50" IsEnabled="False"/>
 
             <Label FontSize="Medium" HorizontalOptions="Center" Text=" Would you recommend this game to your friends or other people in general?"/>
             <Editor x:Name="Question7" IsSpellCheckEnabled="True" HeightRequest="50"  IsEnabled="False"/>
 
             <Label FontSize="Medium" HorizontalOptions="Center" Text="What would you rate this game from 1-5?"/>
-            <Editor x:Name="Question8" IsSpellCheckEnabled="True" HeightRequest="50" IsEnabled="False"/>
+            <Editor x:Name="Question8" IsSpellCheckEnabled="True" HeightRequest="50" IsEnabled="False" TextChanged="OnEditorTextedChanged"/>
+            
             <Button x:Name="SavedButton" IsEnabled="False" Pressed="Button_Pressed" BackgroundColor="LightBlue" Text="Save answers"/>
             <Button x:Name="DoneButton" IsEnabled="False" Pressed="DoneButton_Pressed" BackgroundColor="LightBlue" Text="Done"/>
         </StackLayout>
